        b) in the final release:
            - an grouped list of changes after topic in an logical order with all not noticeable changes removed
        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.

changelog of snapshot [next]
    - added state part serializer for progress bar
    - rewritten data fixer system. Incompatible with old one. Old stuff still arrival, but deprecated
    - old worlds are still load-able as data-fixers were ported
    - improved loading & generation screens
    - added /shuffledata command for shuffling recipes & loot table outputs with other ones
        (must be activated in config files)
    - added data gen system for textures
    - changed order of loading stages to be more functional
    - changed some logging systems
    - implemented two new loot table conditions: minecraft:block_state_property and minecraft:damage_source_properties
    - added DamageSource class
    - improved code

    fixed issues:
        long-term issues:
            - crafting output slot was added to inventory
            - loading bars of mod loading where not in the middle
            - % in world gen / load screen was calculated wrong leading into negative %
            - crafting slot could get saved when closing the game

        since last snapshot:
            - generator for recipe generator was not parsing output correctly leading into errors in the recipes


changelog of snapshot 20w24a released on 10.06.2020 (theme: refactoring & data generators)
    WARNING: this snapshot WILL break some backward-compatibility as it moved a lot of stuff around. Use the constants
        in globals.py for allocation.
    WARNING: this snapshot adds data generators. They are useful, but currently complicated to set up. We will add