@@ -45,7 +45,7 @@ information on development:
         first obscures of the bug the list of issues with an short description and when based on an github bug report
         its id.
 
-changelog of snapshot [next]
+changelog of snapshot 20w25a released on 18.06.2020 (theme: data fixers and API improvements)
     - added state part serializer for progress bar
     - rewritten data fixer system. Incompatible with old one. Old stuff still arrival, but deprecated
     - old worlds are still load-able as data-fixers were ported
@@ -58,6 +58,8 @@ changelog of snapshot [next]
     - implemented two new loot table conditions: minecraft:block_state_property and minecraft:damage_source_properties
     - added DamageSource class
     - improved code
+    - implemented world list with selection. Moved world name enter into world generation settings screen
+    - added UI element for scroll bars
 
     fixed issues:
         long-term issues:
